add advtisement section

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="header_nav-link">Plateform</a>
           </li>
           <li class="header_nav-item">
-            <a href="#" class="header_nav-link">Responsible AI</a>
+            <a href="#" class="header_nav-link">Trusted AI</a>
           </li>
           <li>
             <a href="#" class="header_nav-link">Company</a>
@@ -141,11 +141,11 @@
       <div class="container">
         <div class="plateform_text">
           <h2 class="plateform_text-title">Platform</h2>
-          <h4 class="plateform_text-subtitle">Uniting Human Insight with Machine Precision.</h4>
-          <h4 class="plateform_text-subtitle">Trusted Infrastructure for Generative AI in healthcare.</h4>
+          <h5 class="plateform_text-subtitle">Uniting Human Insight with Machine Precision.</h5>
+          <h5 class="plateform_text-subtitle">Trusted Infrastructure for Generative AI in healthcare.</h5>
         </div>
         <figure class="plateform_card grid grid-col-2">
-          <img src="./assets/images/plateform.png" alt="Platform" />
+          <img src="./assets/images/solution-slide.jpg" alt="Platform" />
           <figcaption class="plateform_card-text">
             <ul class="plateform_card-list">
               <li class="plateform_card-item"><span class="text-purple">Healthcare optimized:</span> Secure and trusted AI platform to drive more intuitive and seamless experiences in putting patients in the center of the business of care.</li>
@@ -287,6 +287,62 @@
               At Autonomize AI, we emphasize the pairing of human insight with machine precision using human-centered design principles, co-piloting workflows, and continuously refining our AI systems for optimal performance, safety, and reliability.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+    <!--Company Section-->
+    <!-- <section class="company">
+      <div class="container">
+        <figure class="trusted grid grid-col-2">
+          <img src="./assets/images/trusted-ai.png" alt="Trusted AI">
+          <figcaption class="trusted-caption">
+            <h2>Trusted AI</h2>
+            <p>The focus on Trusted AI is a vital initiative at the intersection of cutting-edge technology and compassionate care. In this rapidly evolving landscape, we are focused on the importance of integrating ethical, transparent, and accountable principles into healthcare AI systems.</p>
+            <p>Generative AI is a powerful set of capabilities that, if responsibly integrated, can unlock tremendous potential for human health and wellbeing and healthcare and lifesciences organizations. But ensuring that requires deep emphasis on a series of principles:</p>
+          </figcaption>
+        </figure>
+        <div class="solution_bottom grid grid-col-2">
+          <h4>Our commitment to excellence in healthcare is driven by five key principles that guide the design and deployment of our generative AI solutions:</h4>
+          
+          <div class="solution_card card-gradient">
+            <h5 class="solution_card-title">Patient-Centric Design</h5>
+            <p class="solution_card-dis">
+              At Autonomize AI, we place patients at the heart of our innovation process. By prioritizing their needs, experiences, and well-being, we ensure our AI-driven solutions elevate the quality of healthcare services and enhance patient outcomes.
+            </p>
+          </div>
+          <div class="solution_card card-gradient">
+            <h5 class="solution_card-title">Data Privacy & Security</h5>
+            <p class="solution_card-dis">
+              We understand the critical importance of protecting patient data. That's why we adhere to the highest regulatory standards and implement stringent measures to safeguard data privacy and security, fostering trust in our AI-driven healthcare solutions.
+            </p>
+          </div>
+          <div class="solution_card card-gradient">
+            <h5 class="solution_card-title">Ethical AI Development</h5>
+            <p class="solution_card-dis">
+              Autonomize AI is dedicated to incorporating ethical frameworks and guidelines into every stage of our generative AI development. We ensure unbiased, transparent, and fair decision-making processes that align with the core values of healthcare.
+            </p>
+          </div>
+          <div class="solution_card card-gradient">
+            <h5 class="solution_card-title">Inclusivity & Accessibility</h5>
+            <p class="solution_card-dis">
+              We strive to develop AI solutions that cater to diverse populations, considering various demographics, health conditions, and socio-economic backgrounds. Our goal is to promote equitable access to quality healthcare services for all through the power of AI.
+            </p>
+          </div>
+          <div class="solution_card card-gradient">
+            <h5 class="solution_card-title">Collaborative Human-Centered Design</h5>
+            <p class="solution_card-dis">
+              At Autonomize AI, we emphasize the pairing of human insight with machine precision using human-centered design principles, co-piloting workflows, and continuously refining our AI systems for optimal performance, safety, and reliability.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!--Advertisement Section-->
+    <section class="advertisement">
+      <div class="container">
+        <div class="advertisement_caption">
+          <h4>Our culture can be summed up as Being Bold, Acting Fast and Having Fun while creating Delightful experiences for our stakeholders!</h4>
+          <h5>If you are interested in exploring a career at Autonomize, check out our openings here</h5>
         </div>
       </div>
     </section>
