add animation on card hover

--- a/src/index.html
+++ b/src/index.html
@@ -840,7 +840,7 @@
   <script src="./js/main.js"></script>
   <script>
     window.ityped.init(document.querySelector('.ityped'),{
-        strings: ['for Healthcare','for Life Sciences','for Payers','for Providers','for Patients'],
+        strings: ['for Healthcare','for Life Sciences','for Patients'],
         loop: true
     })
   </script>
